# mudaserver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Server Design.drawio  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0050b745b112_updated_folder_structure.py  012a172377b3_added_foldername_storagesize_in_user.py  0f89bfe721db_files_folder_model_added.py  4e8fe933035c_added_pfp_in_user.py  65c3dcc14d43_initial_migration.py  6cfe603e6a0b_add_devices_table.py  d072bc84db4b_test.py  eeb9d4466ada_added_folder_filesmodels2.py  f519cb2005c2_add_devices_table.py  f5398ce93284_.py
app/: apirouter.py  server.py
app/api/: dependencies.py
app/api/auth/: delete_user.py  dependencies.py  refresh.py  register.py  routes.py  token.py  update_user.py
app/api/devices/: __init__.py  device_routes.py
app/api/file/: delete_file.py  download_file.py  edit_file.py  rename_file.py  routes.py  upload_file.py  view_file.py
app/api/folder/: create_folder.py  delete_folder.py  download_folder.py  get_all_folders.py  get_folder.py  rename_folder.py  routes.py  upload_folder.py
app/api/info/: battery_status.py  routes.py  system_info.py
app/api/sync/: __init__.py  sync_routes.py
app/core/: config.py  database.py
app/models/: __init__.py  device.py  files.py  folders.py  user.py
app/schemas/: device.py
app/services/auth/: fileupload.py  security.py
app/services/cleanup/: cleanup_service.py  scheduler.py
app/services/file/: validFile.py  (+3 more)
src/mudaserver/: main.py
tests/: conftest.py  test_sync_endpoints.py  test_view_file.py
(+16 files in other folders)
